[package]
name = "getInflationGovernor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
tokio = { version = "1", features = ["full"] }
solana-account-decoder = "3.1.0"
solana-client = "3.1.4"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
solana-transaction-status-client-types = "3.1.0"
